tests/models/enum/unnamed/u16/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_items = 2)]
        u16
    ),
}
fn main() {}
